# claude-task-runner

./: .codacy.yml  .coverage  .flake8  .gitignore  CLAUDE.md  Makefile  README.md  STREAMING_FIXES.md  discover_mcp_apis.py  fix_tests.py  pyproject.toml  pyproject.toml.backup  run_demo.sh  setup.py
.codacy/: codacy.yaml  guardrails.yaml
.codacy/tools-configs/: pylint.rc
.github/workflows/: claude.yml
.qodo/: testConfig.toml
.serena/: project.yml
.sonarlint/: connectedMode.json
archive/: run_demo.sh  run_json.sh  run_streamlined.sh  test.md  test.result
archive/streamlined_demo/: task_state.json
archive/streamlined_demo/tasks/: 001_first_task.md  002_second_task.md
claude_task_runner/: task_state.json
claude_task_runner/results/: 001_analyze_python_code_structure.result  002_generate_documentation_template.result  003_create_unit_test_examples.result  004_develop_cli_argument_parser.result
docs/: DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md  TEST_IMPLEMENTATION_PLAN.md
sample_project/: task_state.json
src/task_runner/: __init__.py  __main__.py  cli.py
src/task_runner/cli/: app.py  formatters.py  schemas.py  validators.py
src/task_runner/core/: __init__.py  claude_streamer.py  task_manager.py
src/task_runner/mcp/: __init__.py  mcp_server.py  schema.py  server.py  wrapper.py
src/task_runner/presentation/: __init__.py  formatters.py
tests/: conftest.py  test_main.py
tests/cli/: test_app.py  test_app_additional_coverage.py  test_app_commands.py  test_app_coverage.py  test_app_integration.py  test_app_main.py  test_app_simple.py  test_formatters.py  test_formatters_real.py  test_schemas.py  test_schemas_complete.py  test_validators.py
tests/core/: test_claude_streamer.py  test_claude_streamer_basic.py  test_claude_streamer_comprehensive.py  test_skip_permissions.py  test_task_manager.py  test_task_manager_basic.py  test_task_manager_comprehensive.py
tests/mcp/: test_mcp_comprehensive.py  test_mcp_server.py  test_mcp_server_basic.py  test_mcp_server_basic_functions.py  test_mcp_server_comprehensive.py  test_schema_complete.py  test_server.py  test_server_comprehensive.py  test_wrapper.py  test_wrapper_basic.py  test_wrapper_comprehensive.py  test_wrapper_full.py
